--- a/food.html
+++ b/food.html
@@ -8,6 +8,53 @@
     <link rel="stylesheet" href="food.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>
+                <Span>Health</Span>
+                 is wealth! Eating healthy food and following a healthy lifestyle
+            </h1>
+            <p>It can keep us healthy and happy Let us understand what healthy food is!</p>
+            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Food Web</a>
+        </div>
+        <div class="half-width">
+            <img src="./image/first person.png" alt="">
+        </div>
+    </section>
+    <section class="masterchef">
+        <div class="half-width">
+            <img src="./image/secound Person.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Masterchef</h2>
+            <p>MasterChef is based on the British BBC series MasterChef. The competition takes place in the MasterChef soundstage located in Los Angeles, CA which includes a large kitchen area with several cooking stations which is overlooked by a balcony, a well-stocked pantry, a freezer/fridge area and a fine-dining restaurant/seating dining area room used for certain challenges.
+            While the particular format of the season has slightly varied over the years, the following challenges have all been regularly featured.</p>
+            <a class="anchor-button" href="">Food Blog</a>
+        </div>
+    </section>
+    <section class="food-item">
+        <h2>Food Item</h2>
+        <p>Take your time with our collection of slow cooker recipes–for appetizers, entrées, side dishes, and desserts–that were designed to cook slow and deliver huge amounts of great flavor with the least amount of work in the kitchen.</p>
+        <div class="half-width" id="full-stack">
+            <img src="./image/food-1.png" alt="">
+            <h2>Taco Salad</h2>
+            <p>Savory shiitake walnut taco “meat” is the star of this salad, and zippy cilantro lime dressing gives it a fresh finishing touch. Enjoy this salad as a meal on its own, or serve it as a starter with fajitas or tacos. I look forward to making this salad.lemon dressing, Parmesan cheese, pine nuts, and dried cranberries make it zippy, fresh, and satisfying.</p>
+        </div>
+        <div class="half-width" id="baby-web">
+            <img src="./image/food-2.png" alt="">
+            <h2>Pizza</h2>
+            <p>Make way for the all time favourite pizza!  Margherita Pizza is to many the true Italian flag as it was created resembling the colors of the Italian flag, red (tomato), white (mozzarella) and green (basil). Since then this classic pizza has never disappointed anyone.</p>
+        </div>
+        <div class="half-width" id="baby-web">
+            <img src="./image/food-3.png" alt="">
+            <h2>Chocolate</h2>
+            <p>There's no such thing as too much chocolate. Just ask your friends after making brownie lasagna, or Oreogasm poke cake, or the amazingly delicious salted caramel brownies.When you need a good bite of something chocolatey, these cookies, brownies, and cakes will most certainly do the trick.</p>
+        </div>
+    </section>
+    <footer>
+        <h3>Food Webpage</h3>
+        <p>Healthy food simply means nutritious food. These are the foods that are considered good for health.</p>
+    </footer>
     
 </body>
 </html>
