--- a/food.html
+++ b/food.html
@@ -15,7 +15,7 @@
                  is wealth! Eating healthy food and following a healthy lifestyle
             </h1>
             <p>It can keep us healthy and happy Let us understand what healthy food is!</p>
-            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Food Web</a>
+            <a class="anchor-button" target="_blank" href="https://www.epicurious.com/">Food Web</a>
         </div>
         <div class="half-width">
             <img src="./image/first person.png" alt="">
@@ -29,7 +29,7 @@
             <h2>About Masterchef</h2>
             <p>MasterChef is based on the British BBC series MasterChef. The competition takes place in the MasterChef soundstage located in Los Angeles, CA which includes a large kitchen area with several cooking stations which is overlooked by a balcony, a well-stocked pantry, a freezer/fridge area and a fine-dining restaurant/seating dining area room used for certain challenges.
             While the particular format of the season has slightly varied over the years.</p>
-            <a class="anchor-button" href="">Food Blog</a>
+            <a class="anchor-button" target="_blank" href="https://www.instagram.com/banglarrannaghor/?hl=en">Food Blog</a>
         </div>
     </section>
     <section class="food-item">
