--- a/food.html
+++ b/food.html
@@ -46,9 +46,29 @@
             <p>Make way for the all time favourite pizza!  Margherita Pizza is to many the true Italian flag as it was created resembling the colors of the Italian flag, red (tomato), white (mozzarella) and green (basil). Since then this classic pizza has never disappointed anyone.</p>
         </div>
         <div class="half-width1 half-width2">
-            <img src="./image/food-3.png" alt="">
+            <img src="./image/Project Cover.jpg" alt="">
             <h2>Chocolate</h2>
             <p>There's no such thing as too much chocolate. Just ask your friends after making brownie lasagna, or Oreogasm poke cake, or the amazingly delicious salted caramel brownies.When you need a good bite of something chocolatey, these cookies, brownies, and cakes will most certainly do the trick.</p>
+        </div>
+    </section>
+    <section class="reviwes">
+        <div class="rev">
+            <h2>Services Reviwe</h2>
+        </div>
+        <div class="quality half-width1 ">
+            <h2>Ryan Mcgee</h2>
+            <p>Ratings : 8.8/10</p>
+            <p>This site is so exiting.There is lots of that's i want.To be honest it's a very good site for food lover.</p>
+        </div>
+        <div class="quality half-width1">
+            <h2>Gilbert Moran</h2>
+            <p>Ratings : 7.5/10</p>
+            <p>I loved the food that i ordered.the food tase was quit good.But as a food lover i want more.</p>
+        </div>
+        <div class="quality half-width1">
+            <h2>Kelvin Blanchard</h2>
+            <p>Ratings : 9/10</p>
+            <p>I found lost's of Food recipies here.I am learning cooking.It's a good webpage for those who start learning cooking. </p>
         </div>
     </section>
     <footer class="footer">
